# flow

./: index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: app-selector.tsx  navbar.tsx  space-card.tsx  time-chart.tsx
src/hooks/: use-live-timer.ts  use-spaces.ts  use-tracking.ts
src/lib/: tauri.ts  types.ts
src/pages/: analytics.tsx  home.tsx  settings.tsx  space.tsx
